--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./assets/images/logo.png"/>
     <title>Quizzer</title>
+    <link href="styles/common.css" rel="stylesheet" />
     <link href="styles/index.css" rel="stylesheet" />
 </head>
 <body>
     <nav class="navbar">
         <div class="logo-container">
             <img src="assets/images/logo.png" class="logo" />
-            <p>Quizzer</p>
+            <a href="/index.html">
+                <p>Quizzer</p>
+            </a>
         </div>
     </nav>
 
@@ -28,22 +31,30 @@
         <p class="section-title">Categories</p>
         <p class="section-subtitle">Click on a category to start the quiz!</p>
         <div class="categories">
-            <div class="category">
-                <div class="backdrop"></div>
-                <p>Technology</p>
-            </div>
-            <div class="category">
-                <div class="backdrop"></div>
-                <p>Capitals</p>
-            </div>
-            <div class="category">
-                <div class="backdrop"></div>
-                <p>Football</p>
-            </div>
-            <div class="category">
-                <div class="backdrop"></div>
-                <p>General Knowledge</p>
-            </div>
+            <a href="technology.html">
+                <div class="category">
+                    <div class="backdrop"></div>
+                    <p>Technology</p>
+                </div>
+            </a>
+            <a href="capitals.html">
+                <div class="category">
+                    <div class="backdrop"></div>
+                    <p>Capitals</p>
+                </div>
+            </a>
+            <a href="football.html">
+                <div class="category">
+                    <div class="backdrop"></div>
+                    <p>Football</p>
+                </div>
+            </a>
+            <a href="gk.html">
+                <div class="category">
+                    <div class="backdrop"></div>
+                    <p>General Knowledge</p>
+                </div>
+            </a>
         </div>
     </div>
 </body>
